crystal-facet-uml (1.28.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * return arrows in sequences have filled arrow tips,
    distinguishable from dependencies
  * stereotypes are xmi-exported to LocalProfile namespace

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 09 Apr 2021 08:00:00 +0200

crystal-facet-uml (1.28.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * gcov target is only build if -DCFU_ADD_GCOV_TARGET=ON (Closes: #983836)
  * test coverage on pencil package increased
  * exporting image-file types shows statistics on exported elements
  * list layout improved, golden ratio is applied
  * timing and sequence diagram layouting improved;
    special handling for comments/reqs in timing and sequence diagrams
  * version compatibility also in debug mode: 
    newer database-files can be opened with older programs; asserts removed
  * Messages are not cut off after 255 characters (511 now)
  * When resetting selection, diagram is redrawn

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 02 Apr 2021 08:00:00 +0200

crystal-facet-uml (1.27.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * fixed most metainfo.xml warnings 
  * build target for gcov measurement added
  * auto-delete relationships between classifiers that have no common diagram
  * when opening the second database, view switches back to navigation mode
  * when opening the second database, search entry field is cleared
  * when opening the second database, set of marked elements is cleared
  * search result view is updated when changing the database (e.g. by undo)
  * search result view stays when database update is triggered by a 2nd window
  * when clicking on a search result, the element is focused

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 09 Feb 2021 21:30:00 +0100

crystal-facet-uml (1.27.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * compiler switch Werror removed; warnings should not cause build-breaks
