@@ -474,7 +474,7 @@ const xmi_element_info_map_t xmi_element_info_map_standard
         .specification            = (XMI_SPEC_UML | XMI_SPEC_SYSML),
         .profile_name             = NULL,
         .base_name                = "InputPin",
-        .is_a                     = (XMI_ELEMENT_IS_A_ACTIVITY_NODE),
+        .is_a                     = (XMI_ELEMENT_IS_A_ACTIVITY_NODE | XMI_ELEMENT_IS_A_TYPED_ELEMENT),
         .property_from            = NULL,
         .property_to              = NULL,
         .additional_properties    = NULL,
@@ -485,7 +485,7 @@ const xmi_element_info_map_t xmi_element_info_map_standard
         .specification            = (XMI_SPEC_UML | XMI_SPEC_SYSML),
         .profile_name             = NULL,
         .base_name                = "OutputPin",
-        .is_a                     = (XMI_ELEMENT_IS_A_ACTIVITY_NODE),
+        .is_a                     = (XMI_ELEMENT_IS_A_ACTIVITY_NODE | XMI_ELEMENT_IS_A_TYPED_ELEMENT),
         .property_from            = NULL,
         .property_to              = NULL,
         .additional_properties    = NULL,
