@@ -24,12 +24,7 @@ ideas for future versions:
   [ ] export formats: enhance xmi standard compliance
   [?] how to exclude diagrams from export? some are unimportant and exist just for completeness
   [ ] import XMI format
-  [ ] validate export XMI format at http://validator.omg.org/se-interop/tools/validator
-      using mof 2.5.1: https://www.omg.org/spec/MOF/20131001/MOF.xmi
-      using uml 2.5.1: https://www.omg.org/spec/UML/20161101/StandardProfile.xmi
-      using sysml 1.6: https://www.omg.org/spec/SysML/20181001/SysML.xmi
   [ ] xmi export is not spec-compliant for uml:Port, provided and required Interfaces
-  [?] xmi export: adapt stereotypes and value types to spec
   [ ] xmi export: improve error message if exported file exists and is read-only
   @data
   [?] some diagrams exist for completeness only - but do not contain important information. These shall be greyed out.
